# LacamInPogema

./: Lacam_with_POGEMA.ipynb  Readme.md  build_lacam.sh
lacam3/: CMakeLists.txt  main.cpp
lacam3/lacam3/src/: post_processing.cpp
